--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,12 +31,12 @@ jobs:
             docker tag udagram-reverseproxy newthingade/udagram-reverseproxy:v3
             echo "-------- All images succesfully built----------"
             echo " ------- login in to hub--------"
-            docker login -u newthingade -p $DOCKERPASS
+            docker login -u nunegabriel -p $DOCKERPASS
             echo "-------------- Pushing images to dockerhub-------"
-            docker push newthingade/udagram-api-feed:v3
-            docker push newthingade/udagram-api-user:v3
-            docker push newthingade/udagram-frontend:v3
-            docker push newthingade/udagram-reverseproxy:v3
+            docker push nunegabriel/udagram-api-feed:v3
+            docker push nunegabriel/udagram-api-user:v3
+            docker push nunegabriel/udagram-frontend:v3
+            docker push nunegabriel/udagram-reverseproxy:v3
 workflows:
   default:
     jobs:
